--- a/templates/password_manager/sidebar.html
+++ b/templates/password_manager/sidebar.html
@@ -40,10 +40,11 @@
                     <div class="name">{{user.name}}</div>
                 </div>
             </div>
-            <i class='bx bx-log-out' id="log_out"></i>
+            <a href="{%url 'logout'%}"><i class='bx bx-log-out' id="log_out"></i></a>
         </li>
     </ul>
 </div>
+
 <section class="home-section">
     <div class="text">Dashboard</div>
 </section>
