--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -33,11 +33,25 @@
 
                     <label for="exampleFormControlInput1" class="form-label">Password</label>
                     {{form.password}}
+
+                    <div class="messags">
+                        <input type="checkbox" onclick="showPassword()">Show Password
+
+                        <ul>
+                            <li id="lowercase" class="invalid">A <b>lowercase</b> letter</li>
+                            <li id="uppercase" class="invalid">A <b>uppercase</b> letter</li>
+                            <li id="special" class="invalid">A <b>special characters</b></li>
+                            <li id="number" class="invalid">A <b>number</b></li>
+                            <li id="lenght" class="invalid">Minimum <b>12 characters</b></li>
+                        </ul>
+                        <button class="btn btn-primary" id="random">Random password</button>
+                    </div>
+
                 </div>
                 <div class="form-group">
-
                     <label for="exampleFormControlInput1" class="form-label">Confirm password</label>
                     {{form.password2}}
+
                 </div>
                 <button type="submit" class="mt-3 btn btn-primary form-control ">Register</button>
                 <span class="d-flex align-items-center justify-content-center mt-2">
@@ -51,3 +65,7 @@
 </div>
 
 {% endblock body %}
+
+{% block script %}
+<script src="{%static 'js/user/user.js'%}"></script>
+{% endblock script %}
