--- a/templates/password_manager/base.html
+++ b/templates/password_manager/base.html
@@ -8,8 +8,10 @@
     <link flex href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/password_manager/base.css'%}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
+    <link rel="stylesheet" href="{% static 'css/password_manager/sidebar.css'%}">
+    <link rel="stylesheet" href="{% static 'css/password_manager/styles.css'%}">
     {% block css %}
 
     {% endblock css %}
@@ -22,35 +24,6 @@
     <section class="home-section">
 
         {% block section %}
-        <!-- class text for section html -->
-        <div class="card text" style="width: 18rem;">
-            <div class="card-body">
-                <h5 class="card-title">Steam</h5>
-                <!-- <input class="card-text" >Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</input> -->
-
-                <!-- <div class="form-group">
-                    <label>Password</label>
-                    <div class="input-group" id="show_hide_password">
-                        <input class="form-control" type="password">
-                        <div class="input-group-addon">
-                            <a class="eye-icon"><i class="fa-solid fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div> -->
-
-                <label class="form-label">Password</label>
-                <div class="input-group mb-3">
-                    <input class="form-control password" id="password" class="block mt-1 w-full" type="password"
-                        name="password" value="secret!" readonly/>
-                    <span class="input-group-text togglePassword" id="">
-                        <i class="fa-solid fa-eye" style="cursor: pointer;"></i>
-                    </span>
-                </div>
-
-                <a href="#" class="card-link">View history</a>
-            </div>
-        </div>
 
         {% endblock section %}
 
@@ -58,7 +31,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-
+    <script src="{%static 'js/password_manager/sidebar.js'%}"></script>
+    <script src="{%static 'js/password_manager/index.js'%}"></script>
     {% block scripts %}
 
     {% endblock scripts %}
