--- a/templates/password_manager/home.html
+++ b/templates/password_manager/home.html
@@ -2,15 +2,18 @@
 
 
 {% block section %}
+<div class="d-flex flex-column">
+    <div class="d-flex justify-content-center"><button class="btn btn-primary mt-2">Create password</button></div>
 
+</div>
 {% for password in passwords %}
 <!-- class text for section html -->
 <div class="card text" style="width: 18rem;">
     <div class="card-body">
         <h3 class="card-title">{{password.title}}</h3>
         <div class="input-group mb-3">
-            <input class="form-control password" id="password_{{password.id}}" class="block mt-1 w-full" type="password" name="password"
-                value="{{password.value}}" readonly />
+            <input class="form-control password" id="password_{{password.id}}" class="block mt-1 w-full" type="password"
+                name="password" value="{{password.value}}" readonly />
             <span class="input-group-text togglePassword" id="" onclick="showPassword('password',this)">
                 <i class="fa-solid fa-eye" style="cursor: pointer;"></i>
             </span>
