--- a/templates/password_manager/base.html
+++ b/templates/password_manager/base.html
@@ -21,6 +21,11 @@
 
 <body>
     {% include 'password_manager/sidebar.html' with user=request.user %}
+
+    {% block modal %}
+
+    {% endblock modal %}
+
     <section class="home-section">
 
         {% block section %}
@@ -31,6 +36,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+        
     <script src="{%static 'js/password_manager/sidebar.js'%}"></script>
     <script src="{%static 'js/password_manager/index.js'%}"></script>
     {% block scripts %}
