--- a/templates/password_manager/home.html
+++ b/templates/password_manager/home.html
@@ -1,13 +1,40 @@
 {% extends 'password_manager/base.html' %}
 
 
+
+{% block modal %}
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock modal %}
+
+
 {% block section %}
-<div class="d-flex flex-column">
-    <div class="d-flex justify-content-center"><button class="btn btn-primary mt-2">Create password</button></div>
+<div class="d-flex flex-column mb-3">
+    <div class="d-flex justify-content-center">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Launch demo modal
+          </button>
+          
+    </div>
 
 </div>
 {% for password in passwords %}
-<!-- class text for section html -->
 <div class="card text" style="width: 18rem;">
     <div class="card-body">
         <h3 class="card-title">{{password.title}}</h3>
