--- a/templates/password_manager/home.html
+++ b/templates/password_manager/home.html
@@ -3,51 +3,64 @@
 
 
 {% block modal %}
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-          </button>
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Create Password</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <div class="mb-3">
+          <label for="title-input" class="form-label">Title</label>
+          <input type="text" class="form-control" id="title-input" placeholder="Title...">
         </div>
-        <div class="modal-body">
-          ...
+
+        <div class="mb-3">
+          <label for="title-password" class="form-label">Password</label>
+          <input type="text" class="form-control" id="title-password" placeholder="Password...">
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+
+        <div class="mb-3">
+          <button class="btn btn-primary">Generate password</button>
         </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
+</div>
 {% endblock modal %}
 
 
 {% block section %}
-<div class="d-flex flex-column mb-3">
-    <div class="d-flex justify-content-center">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Launch demo modal
-          </button>
-          
-    </div>
+<div class="d-flex flex-column ">
+  <div class="d-flex justify-content-center mt-3">
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      Save password
+    </button>
+  </div>
 
 </div>
 {% for password in passwords %}
 <div class="card text" style="width: 18rem;">
-    <div class="card-body">
-        <h3 class="card-title">{{password.title}}</h3>
-        <div class="input-group mb-3">
-            <input class="form-control password" id="password_{{password.id}}" class="block mt-1 w-full" type="password"
-                name="password" value="{{password.value}}" readonly />
-            <span class="input-group-text togglePassword" id="" onclick="showPassword('password',this)">
-                <i class="fa-solid fa-eye" style="cursor: pointer;"></i>
-            </span>
-        </div>
-
-        <a href="#" class="card-link">View history</a>
+  <div class="card-body">
+    <h3 class="card-title">{{password.title}}</h3>
+    <div class="input-group mb-3">
+      <input class="form-control password" id="password_{{password.id}}" class="block mt-1 w-full" type="password"
+        name="password" value="{{password.value}}" readonly />
+      <span class="input-group-text togglePassword" id="" onclick="showPassword('password',this)">
+        <i class="fa-solid fa-eye" style="cursor: pointer;"></i>
+      </span>
     </div>
+
+    <a href="#" class="card-link">View history</a>
+  </div>
 </div>
 <br>
 {% endfor %}
