--- a/templates/password_manager/home.html
+++ b/templates/password_manager/home.html
@@ -21,7 +21,7 @@
 
         <div class="mb-3">
           <label for="title-password" class="form-label">Password</label>
-          <input type="text" class="form-control" id="title-password" placeholder="Password...">
+          <input type="text" class="form-control" id="password-input" placeholder="Password...">
         </div>
 
         <div class="mb-3">
@@ -30,7 +30,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary" onclick="createPassword()">Save</button>
       </div>
     </div>
   </div>
